--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,7 @@ h1{
   background-color:rgba(255,255,0,0.3);
   color:#8b0000;
   font-size:3em;
+  border: 2px solid black;
 }
 p.fancy{
   color:#666;
