--- a/mystyle.css
+++ b/mystyle.css
@@ -13,3 +13,9 @@ li{
   font-size:30px;
   font-style: oblique;
 }
+h2{
+  background-color:#ffe6f9;
+  color:#4d0099;
+  font-size:3em;
+  border:2px solid black;
+}
