--- a/mystyle.css
+++ b/mystyle.css
@@ -28,3 +28,6 @@ h3{
   font-size:3em;
   border:2px solid black;
 }
+body.subtle{
+  background: linear-gradient(to bottom, #ffffcc 0%, #b30000 100%)
+}
