--- a/mystyle.css
+++ b/mystyle.css
@@ -32,3 +32,6 @@ body.subtle{
   background-color:#ffffcc;
   background-image:linear-gradient(to bottom,#ffffcc 0%,#b30000 100%)
 }
+body.pretty{
+  background-color:#efccff;
+}
