--- a/mystyle.css
+++ b/mystyle.css
@@ -30,8 +30,8 @@ h3{
 }
 body.subtle{
   background-color:#ffffcc;
-  background-image:linear-gradient(to bottom,#ffffcc 0%,#b30000 100%)
+  background-image:linear-gradient(to bottom,#ffffcc 0%,#b30000 100%);
 }
 body.pretty{
-  background-color:#efccff;
+  background-color:#f7e6ff;
 }
