--- a/mystyle.css
+++ b/mystyle.css
@@ -46,10 +46,11 @@ table.awesome{
   background-color:#ffccff;
 }
 p.cool{
-  border:2px solid black;
+  border:2px solid black 50%;
   color:#8b0000;
 }
 p.amazing{
   color:#4d0099;
-  border:2px solid black 50%;
+  border:2px solid black;
+  font-size:15px;
 }
