--- a/mystyle.css
+++ b/mystyle.css
@@ -46,11 +46,11 @@ table.awesome{
   background-color:#ffccff;
 }
 p.cool{
-  border:2px solid black 50%;
+  border:2px solid black;
   color:#8b0000;
 }
 p.amazing{
   color:#4d0099;
   border:2px solid black;
-  font-size:15px;
+  font-size:30px;
 }
