--- a/mystyle.css
+++ b/mystyle.css
@@ -49,6 +49,10 @@ table.awesome{
 p.cool{
   border:2px solid black;
   color:#8b0000;
+  padding-top:30%;
+  padding-right:30%;
+  padding-bottom:30%;
+  padding-left:50%;
 }
 p.amazing{
   color:#4d0099;
