--- a/mystyle.css
+++ b/mystyle.css
@@ -46,13 +46,9 @@ h4{
 table.awesome{
   background-color:#ffccff;
 }
-div{
-  border:1px solid black;
+p.cool{
+  border:2px solid black;
   color:#8b0000;
-  padding-top:30%;
-  padding-right:30%;
-  padding-bottom:30%;
-  padding-left:40%;
 }
 p.amazing{
   color:#4d0099;
