--- a/mystyle.css
+++ b/mystyle.css
@@ -44,7 +44,7 @@ h4{
   border:2px solid black;
 }
 table.awesome{
-  background-color:#ffccff;
+  background-color:#ffffcc;
 }
 p.cool{
   border:2px solid black;
