--- a/mystyle.css
+++ b/mystyle.css
@@ -72,3 +72,17 @@ p.gnarly{
   color:#4d0099;
   background-color:#ffe6ff;
 }
+*{
+  box-sizing: border-box;
+}
+.column{
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+/* Clearfix (clear floats) */
+.row::after{
+  content:"";
+  clear: both;
+  display: table;
+}
